# poster-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: auth.py  poster.py
app/core/: config.py  prompts.py
app/schemas/: poster.py
app/services/: ai_service.py  renderer_service.py  storage_service.py
app/services/generator/: coder.py  painter.py  planner.py
app/utils/: extract_dimensions.py
