[project]
name = "poster-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "fastapi[all]>=0.126.0",
    "playwright>=1.57.0",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sniffio>=1.3.1",
    "uvicorn[standard]>=0.40.0",
    "zhipuai>=2.1.5.20250825",
]
